--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -38,6 +38,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     environment: Staging 
+    needs: development-build
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
@@ -57,6 +58,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     environment: Production 
+    needs: staging-build
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
