--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,76 +1,43 @@
-# This is a basic workflow to help you get started with Actions
+name: Blob storage website CI
 
-name: Workflow with environments Development , Staging , and Production 
-
-# Controls when the workflow will run
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
+    push:
+        branches: [ main ]
+        
+permissions:
+      id-token: write
+      contents: read
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  development-build:
-    # The type of runner that the job will run on
+  build:
     runs-on: ubuntu-latest
-    environment: Development 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    strategy:
+      matrix:
+        node-version: [18.x]
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
+    - uses: azure/login@v1
+      with:
+           client-id: 924ad864-a538-48d4-9d8e-f04952f52f0c
+           tenant-id: e562f78c-d375-479f-9e61-6c663bca9b46
+           subscription-id: 1db9c769-08c3-4b8e-9e1c-9aac43aefe4f
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-  staging-build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-    environment: Staging 
-    needs: development-build
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-
-  production-build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-    environment: Production 
-    needs: staging-build
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-
+    - name: Install
+      run: npm install
+    - name: Build
+      run: npm run build
+    - name: Start
+      run: nohup npm start &
+    - uses: google-github-actions/setup-gcloud@master
+      with:
+        version: '276.0.0'
+        service_account_email: "git-deploy@primeval-sweep-238715.iam.gserviceaccount.com"
+        service_account_key: ${{ secrets.GCPDEPLOY }}
+        export_default_credentials: true
+    - name:  Deploy static site to google storage
+      run: gsutil -m rsync -d -c -r ./ gs://www.spacemoon.com
